--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
 <div>
-  <h1>{{ message }}</h1>
+  <h1>🍁🎂</h1>
+  <h2>Contract address: {{ address }}</h2>
+  <h2>Greeting: {{ greeting }}</h2>
 </div>
