Integrate basic user registry contract

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div>
   <h1>🍁🎂</h1>
   <h2>Contract address: {{ address }}</h2>
-  <h2 class="greeting">Greeting: {{ greeting }}</h2>
+  <h2 class="banner">Banner: {{ banner }}</h2>
 </div>
