Add web3 service

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <div>
   <h1>🍁🎂</h1>
-  <h2>Contract address: {{ address }}</h2>
+  <h2>Contract address: {{ contractAddress }}</h2>
+  <h2>User address: {{ userAddress }}</h2>
   <h2 class="banner">Banner: {{ banner }}</h2>
 </div>
